# fastapi-blog

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  schemas.py
app/: main.py
app/models/: __init__.py  post.py  user.py
app/providers/: __init__.py  database.py  services.py
app/repositories/: post_repository.py  user_repository.py
app/schemas/: __init__.py  post.py  user.py
app/services/: post_service.py  user_service.py
config/: config.py  database.py
database/: blog.db
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
routers/: web.py
routers/api/: posts.py  users.py
static/css/: input.css  main.css
static/js/: toast.js  utils.js
templates/: home.html  layout.html  post.html
templates/components/: page_header.html  post_modal.html
templates/errors/: error.html
templates/layouts/: base.html
templates/posts/: index.html  show.html
