[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.0.0",
    "pydd",
    "sqlalchemy>=2.0.51",
]

[tool.uv.sources]
pydd = { path = "../pydd" }
