[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.139.0",
    "greenlet>=3.5.3",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.0.0",
    "pydd",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
]

[tool.uv.sources]
pydd = { path = "../pydd" }
